СУКА БЛЯТЬ КУДА ЕБУЧАЯ СРАНЫЕ НЕДОПЛЮСЫ НА СРАНОЙ НЕДОВИДЮХЕ

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,6 +1,7 @@
-SRCDIR   = src
-BUILDDIR = build
-BINDIR   = bin
+SRCDIR   = $(CURDIR)/src
+BUILDDIR = $(CURDIR)/build
+BINDIR   = $(CURDIR)/bin
+SEND_DIR = $(CURDIR)/send/lab2
 
 CC = nvcc
 
@@ -15,8 +16,9 @@ LDFLAGS = -lm
 
 TARGET = $(BINDIR)/lab2
 
-CU_SOURCES += main.cu
-C_SOURCES += serialize.c
+CU_SOURCES = main.cu
+C_SOURCES  = serialize.c
+HEADERS    = serialize.h
 
 C_OBJECTS = $(addprefix $(BUILDDIR)/,$(addsuffix .o,$(C_SOURCES)))
 CU_OBJECTS = $(addprefix $(BUILDDIR)/,$(addsuffix .o,$(CU_SOURCES)))
@@ -26,13 +28,21 @@ OBJECTS = $(C_OBJECTS) $(CU_OBJECTS)
 all: $(TARGET)
 clean:
 	-rm $(OBJECTS) $(TARGET)
+	-$(MAKE) -C test clean
 
-$(BUILDDIR) $(BINDIR):
+$(BUILDDIR) $(BINDIR) $(SEND_DIR):
 	mkdir -p $@
 
 .PHONY: test
 test:
-	@echo $(OBJECTS)
+	$(MAKE) -j1 -C test test TEST_TOOL=$(TARGET)
+
+.PHONY: send
+send: | $(SEND_DIR)
+	cp $(addprefix $(SRCDIR)/,$(C_SOURCES) $(CU_SOURCES) $(HEADERS)) $(SEND_DIR)
+	cp $(SEND_DIR)/../Makefile $(SEND_DIR)
+	cd $(SEND_DIR)/.. && tar cvf lab2.tar lab2
+	gpg -r 703FD5D038947C5B57CCE5A64DF7496E16FD3CBC -ab $(SEND_DIR)/../lab2.tar
 
 $(TARGET): $(OBJECTS) | $(BINDIR)
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@
