--- a/lab3/test/Makefile
+++ b/lab3/test/Makefile
@@ -1,7 +1,7 @@
 CONVERT_TOOL ?= ../../conv/convert
 TEST_TOOL    ?= ../bin/lab3
 
-TESTS = t1 t2
+TESTS = t1 t2 t3
 
 INPUT  = $(addsuffix /in,$(TESTS))
 RESULT = $(addsuffix /res,$(TESTS))
