--- a/lab5/test/Makefile
+++ b/lab5/test/Makefile
@@ -1,11 +1,10 @@
 TEST_TOOL    ?= ../bin/lab4
 
-TESTS = t1 t2 t3
+TESTS = t1
 
 INPUT  = $(addsuffix /in,$(TESTS))
 RESULT = $(addsuffix /res,$(TESTS))
 WANT   = $(addsuffix /want,$(TESTS))
-
 
 .PHONY: all clean
 .PHONY: $(RESULT)
