--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -23,6 +23,7 @@ GCCFLAGS = -Wall -Wextra -g3 \
 NVCCFLAGS += --std=c++11 -Werror cross-execution-space-call
 NVCCFLAGS += -arch=sm_35 -Wno-deprecated-gpu-targets
 NVCCFLAGS += -Wno-deprecated-declarations
+NVCCFLAGS += -DBENCHMARK
 NVCCFLAGS += -G
 NVCCFLAGS += --compiler-options "$(GCCFLAGS)"
 
