--- a/lab5/test/Makefile
+++ b/lab5/test/Makefile
@@ -1,23 +1,40 @@
-TEST_TOOL ?= ../bin/lab5
+CONVERT_TOOL ?= ../../convert/convert
+TEST_TOOL    ?= ../bin/lab5
 
-TESTS = t1 t2 t3 t4 t5
+TESTS = t1 t2 t3 t4
+
+DIFFS = $(addprefix test-,$(TESTS))
 
 INPUT  = $(addsuffix /in,$(TESTS))
 RESULT = $(addsuffix /res,$(TESTS))
 WANT   = $(addsuffix /want,$(TESTS))
-DIFFS = $(addprefix test-,$(TESTS))
+
+HEX_INPUT  = $(addsuffix .hex,$(INPUT))
+HEX_WANT   = $(addsuffix .hex,$(WANT))
+HEX_RESULT = $(addsuffix .hex,$(RESULT))
+
+BINARY_INPUT  = $(addsuffix .bin,$(INPUT))
+BINARY_RESULT = $(addsuffix .bin,$(RESULT))
+
+HEXS   = $(HEX_INPUT) $(HEX_RESULT)
 
 .PHONY: all clean
 
 all: $(DIFFS)
 
 clean:
-	-rm $(RESULT)
+	-rm $(BINARY_INPUT) $(BINARY_RESULT) $(HEX_RESULT)
 
 .PHONY: $(DIFFS)
-$(DIFFS): test-%: %/want %/res
-	-diff -q $^
+$(DIFFS): test-%: %/want.hex %/res.hex
+	-diff $^
 
-.PHONY: $(RESULT) # run always
-$(RESULT): %/res: %/in
-	cd $* && cat in | $(TEST_TOOL) > res
+$(HEX_RESULT): %.hex: %.bin
+	@$(CONVERT_TOOL) hex-array --first-length=false -i $^ -o $@ --mode=decode
+
+$(BINARY_INPUT): %.bin: %.hex
+	@$(CONVERT_TOOL) hex-array --first-length=true -i $^ -o $@ --mode=encode
+
+.PHONY: $(BINARY_RESULT) # run always
+$(BINARY_RESULT): %/res.bin: %/in.bin
+	cat $^ | $(TEST_TOOL) > $@
