--- a/lab2/test/Makefile
+++ b/lab2/test/Makefile
@@ -1,7 +1,7 @@
-CONVERT_TOOL ?= ../../conv/convert
+CONVERT_TOOL ?= ../../convert/convert
 TEST_TOOL    ?= ../bin/lab2
 
-TESTS = t1 t2 t3 t4
+TESTS = t1 t2 t3 t4 t5
 
 INPUT  = $(addsuffix /in,$(TESTS))
 WANT   = $(addsuffix /want,$(TESTS))
@@ -23,10 +23,8 @@ BINS   = $(BINARY_INPUT) $(BINARY_WANT)
 HEXS   = $(HEX_INPUT) $(HEX_WANT) $(HEX_RESULT)
 IMAGES = $(IMAGE_INPUT) $(IMAGE_WANT) $(IMAGE_RESULT)
 
-.PHONY: $(BINARY_RESULT)
-
-.PHONY: all clean
-all: $(BINS)
+.PHONY: all test images clean
+all: test
 	
 clean:
 	-rm $(BINS) $(IMAGES) $(HEX_RESULT)
@@ -36,8 +34,11 @@ run: $(IMAGES)
 DIFFS = $(addprefix test-,$(RESULT))
 test: $(DIFFS)
 
+images: $(IMAGES)
+
+.PHONY: $(DIFFS)
 $(DIFFS): test-%/res: %/want.hex %/res.hex
-	-diff $^
+	-diff -q $^
 
 $(HEX_RESULT): %.hex: %.bin
 	@$(CONVERT_TOOL) hex -i $^ -o $@ --mode=decode
@@ -48,5 +49,6 @@ $(BINS): %.bin: %.hex
 $(IMAGES): %.png: %.bin
 	@$(CONVERT_TOOL) image -i $^ -o $@ --mode=decode
 
+.PHONY: $(BINARY_RESULT)
 $(BINARY_RESULT): %/res.bin: %/in.bin
 	echo $^ $@ | $(TEST_TOOL)
