--- a/lab5/test/Makefile
+++ b/lab5/test/Makefile
@@ -1,7 +1,7 @@
-CONVERT_TOOL ?= ../../convert/convert
-TEST_TOOL    ?= ../bin/lab5
+CONVERT_TOOL ?= $(CURDIR)/../../convert/convert
+TEST_TOOL    ?= $(CURDIR)/../bin/lab5
 
-TESTS = t1 t2 t3 t4 t5 t6
+TESTS = t1 t2 t3 t4 t5 t6 t7
 
 DIFFS = $(addprefix test-,$(TESTS))
 
@@ -30,11 +30,11 @@ $(DIFFS): test-%: %/want.hex %/res.hex
 	-diff -q $^
 
 $(HEX_RESULT): %.hex: %.bin
-	@$(CONVERT_TOOL) hex-array --first-length=false -i $^ -o $@ --mode=decode
+	@$(CONVERT_TOOL) convert hex-array --first-length=false -i $^ -o $@ --mode=decode
 
 $(BINARY_INPUT): %.bin: %.hex
-	@$(CONVERT_TOOL) hex-array --first-length=true -i $^ -o $@ --mode=encode
+	@$(CONVERT_TOOL) convert hex-array --first-length=true -i $^ -o $@ --mode=encode
 
 .PHONY: $(BINARY_RESULT) # run always
 $(BINARY_RESULT): %/res.bin: %/in.bin
-	cat $^ | $(TEST_TOOL) > $@
+	cd $* && $(TEST_TOOL) < in.bin > res.bin
