--- a/lab4/test/Makefile
+++ b/lab4/test/Makefile
@@ -1,9 +1,8 @@
 CONVERT_TOOL ?= $(CURDIR)/../../convert/convert
-TEST_TOOL    ?= $(CURDIR)/../bin/lab5
+TEST_TOOL    ?= $(CURDIR)/../bin/lab4
 
-TESTS = t1 t2 t3 t4 t5 t6 t7
-
-DIFFS = $(addprefix test-,$(TESTS))
+TESTDIRS = t1 t2 t3
+TESTS = $(addprefix $(CURDIR)/,$(TESTDIRS))
 
 INPUT  = $(addsuffix /in,$(TESTS))
 RESULT = $(addsuffix /res,$(TESTS))
@@ -11,19 +10,23 @@ WANT   = $(addsuffix /want,$(TESTS))
 
 .PHONY: all clean
 
-all: $(DIFFS)
+all: $(TESTS)
 
 clean:
 	-rm $(RESULT)
 
 EQUAL_TOOL = $(CURDIR)/equal/equal
-$(EQUAL_TOOL): $(dir $(EQUAL_TOOL))
+$(EQUAL_TOOL): $(dir $(EQUAL_TOOL))/main.go
 	go build -v -o $@ $^
 
-.PHONY: $(DIFFS)
-$(DIFFS): test-%: %/want %/res | $(EQUAL_TOOL)
-	$(EQUAL_TOOL) --want $(word 1,$^) --result $(word 2,$^)
+.PHONY: $(TESTDIRS)
+$(TESTDIRS): $(CURDIR)/$@
+$(TESTDIRS): ;
+
+.PHONY: $(TESTS)
+$(TESTS): %: %/want %/res | $(EQUAL_TOOL)
+	-$(EQUAL_TOOL) --want $(word 1,$^) --result $(word 2,$^)
 
 .PHONY: $(RESULT) # run always
 $(RESULT): %/res: %/in
-	cd $* && $(TEST_TOOL) < in > res
+	$(TEST_TOOL) < $^ > $@
